@@ -1,17 +1,20 @@
 --- #YAML:1.0
 name:                YAML-DBH
-version:             1.06
+version:             1.07
 abstract:            ~
 license:             ~
 author:              ~
 generated_by:        ExtUtils::MakeMaker version 6.44
 distribution_type:   module
 requires:     
-    DBD::mysql:                    3.0002
+    Carp:                          1
+    Cwd:                           3
+    DBD::mysql:                    4.008
+    DBD::SQLite:                   1.14
     DBI:                           1.607
-    Exporter:                      5.58
-    Test::Simple:                  0.8
-    YAML:                          0.62
+    Exporter:                      5
+    Test::Simple:                  0
+    YAML:                          0.66
 meta-spec:
     url:     http://module-build.sourceforge.net/META-spec-v1.3.html
     version: 1.3
