@@ -1,0 +1,4 @@
+#!/usr/bin/perl
+unlink qw(./t/sqlite.conf ./t/test.db);
+
+print STDERR "Done.\n";
